archives/kubernetes/box/box-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: box-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: box-api
  template:
    metadata:
      labels:
        app: box-api
    spec:
      containers:
        - name: box-api
          image: samy266/box:latest
          ports:
            - containerPort: 80
