archives/kubernetes/box/box-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: box-api
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: box-api
  type: ClusterIP
