archives/kubernetes/box/box-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: box-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k3sbox.smokhtari.com
      secretName: box-tls
  rules:
    - host: box.smokhtari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: box-api
                port:
                  number: 80
